--- a/demo/src/main/resources/application.yml
+++ b/demo/src/main/resources/application.yml
@@ -8,8 +8,10 @@ spring:
     jdbc:
       initialize-schema: always
   application:
+  # 消しても問題ないか確認
     name: demo
   mail:
     host: ${MAIL_HOST:localhost}
     port: ${MAIL_PORT:1025}
+    # ただのlocalhostと1025に書き換える
 
