--- a/demo/src/main/resources/application.yml
+++ b/demo/src/main/resources/application.yml
@@ -7,5 +7,5 @@ spring:
   mail:
     host: ${MAIL_HOST:localhost}
     port: ${MAIL_PORT:1025}
-    # ただのlocalhostと1025に書き換える
+logging.level.org.springframework.security: DEBUG
 
