--- a/demo/src/main/resources/application.yml
+++ b/demo/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/scraping
-    username: postgres
-    password: postgres
+    url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:scraping}
+    username: ${DB_USER:postgres}
+    password: ${DB_PASS:postgres}
   mail:
     host: ${MAIL_HOST:localhost}
     port: ${MAIL_PORT:1025}
